--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,8 @@
                         <compilerArgs>
                             <arg>-parameters</arg>
                         </compilerArgs>
+                            <source>17</source>
+                            <target>17</target>
                     </configuration>
                 </plugin>
             </plugins>
