--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>yudao-module-crm</module>
         <module>yudao-module-erp</module>
         <module>yudao-module-ai</module>
+        <module>yudao-module-hcm</module>
     </modules>
 
     <name>${project.artifactId}</name>
